Modify Main Page Form
Changing original main form to be more intuitive and only allow for only
one way to use npact at a time (i.e. either file upload, paste in, url, or
accession number)

--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -19,9 +19,9 @@
     <div id="mainContainer">
       <div id="content">
         {% if messages %}
-        <ul class="messages">
-          {% for message in messages %}
-          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        <ul class=flashes>
+          {% for category, message in messages %}
+          <li class="{{ category }}">{{ message }}</li>
           {% endfor %}
         </ul>
         {% endif %}
