--- a/npactflask/npactflask/templates/start.html
+++ b/npactflask/npactflask/templates/start.html
@@ -23,13 +23,13 @@ function getParameterByName(name) {
     return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
 }
 
-jQuery(document).ready(function() {
-  jQuery('#forms form').hide();
+$(document).ready(function() {
+  jQuery('#forms div').hide();
 
-  jQuery('#selectors button').on('click', function(evt) {
+  $('#selectors button').on('click', function(evt) {
     var btn = jQuery(evt.target).parent();
     var target = jQuery(btn).data('target');
-    jQuery('#forms form').hide();
+    jQuery('#forms div').hide();
     jQuery(target).toggle();
   });
   var active = getParameterByName('active');
@@ -59,7 +59,7 @@ jQuery(document).ready(function() {
     <button data-target="#form-number" class="btn-number">Accession Number</button>
   </div>
   <div id="forms" style="margin: 5px 5px;">
-    <div class="form-upload">
+    <div id="form-upload">
       <form method="post" action="#" enctype="multipart/form-data">
         <button class="ui-button btn-file" title="Select a file for upload">Choose File</button><span class="button-message">No file selected</span>
         <p>Email me the results @ <input id="email" name="email" type="email">(optional)</p>
@@ -68,7 +68,7 @@ jQuery(document).ready(function() {
         </button>
       </form>
     </div>
-    <div class="form-url">
+    <div id="form-url">
       <form method="post" action="#" enctype="multipart/form-data">
         <input id="url" name="url" type="url" value="">
         <p>Email me the results @ <input id="email" name="email" type="email">(optional)</p>
@@ -77,7 +77,7 @@ jQuery(document).ready(function() {
         </button>
       </form>
     </div>
-    <div class="form-pastein">
+    <div id="form-pastein">
       <input type="hidden" name="action" value="pastein">
       <form method="post" action="#" enctype="multipart/form-data">
         <textarea id="pastein" name="pastein"></textarea>
@@ -87,7 +87,7 @@ jQuery(document).ready(function() {
         </button>
       </form>
     </div>
-    <div class="form-number">
+    <div id="form-number">
       <form method="post" action="#" enctype="multipart/form-data">
         <input id="entrez_search_term" name="entrez_search_term" type="search" value="">
         <p>Email me the results @ <input id="email" name="email" type="email">(optional)</p>
