Importing to Flask
Continued to make changes so the program will run on flask. Going to
have a switch to handle all of the forms.

--- a/npactflask/npactflask/templates/start.html
+++ b/npactflask/npactflask/templates/start.html
@@ -95,7 +95,9 @@ $(document).ready(function() {
     </div>
     <div id="form-number">
       <form method="post" action="#" enctype="multipart/form-data">
-        <input id="entrez_search_term" name="entrez_search_term" type="search" value="">
+        <label>Accession Number:
+          <input id="entrez_search_term" name="entrez_search_term" type="search" value="">
+        </label>
         <p>Email me the results @ <input id="email" name="email" type="email">(optional)</p>
         <button class="Start ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" type="submit" name="action" value="run" title="Get the analysis results based on default configuration." role="button">
           <span class="ui-button-text">Start Analysis!</span>
