--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -36,10 +36,10 @@
   <script type="text/javascript">
     angular.module('npact')
       .constant('STATUS_BASE_URL', '{{status_base}}')
-      .constant('KICKSTART_BASE_URL', '{{kickstart_base}}')
-      .constant('TRANSLATE_BASE_URL', '{{translate_base}}')
-      .constant('FETCH_URL', '{{fetch_base}}')
-      .constant('ACGT_GAMMA_FILE_LIST_URL', '{{acgt_gamma_base}}')
+      .constant('KICKSTART_URL', '{{kickstart}}')
+      .constant('TRANSLATE_URL', '{{translate}}')
+      .constant('FETCH_BASE_URL', '{{fetch_base}}')
+      .constant('ACGT_GAMMA_FILE_LIST_BASE_URL', '{{acgt_gamma_base}}')
       // .constant('CSRF_TOKEN', '{{csrf_token}}')
       .constant('STATIC_BASE_URL', '{{STATIC_URL}}');
   </script>
